--- a/package.json
+++ b/package.json
@@ -2,8 +2,19 @@
   "name": "snowpack-plugin-less",
   "version": "1.0.5",
   "description": "Use the Less compiler to build .less files from source",
-  "main": "plugin.js",
-  "scripts": {},
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc",
+    "test": "jest",
+    "cov": "jest --coverage",
+    "lint": "eslint ./src/** --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "release": "release-it"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fansenze/snowpack-plugin-less.git"
@@ -16,12 +27,36 @@
     "snowpack-plugin"
   ],
   "author": "senze.fan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/fansenze/snowpack-plugin-less/issues"
   },
   "homepage": "https://github.com/fansenze/snowpack-plugin-less#readme",
   "dependencies": {
     "less": "^3.12.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/less": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.0.9",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "release-it": "^14.4.0",
+    "snowpack": "^3.0.11",
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
