--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "homepage": "https://github.com/fansenze/snowpack-plugin-less#readme",
   "dependencies": {
-    "less": "^3.12.2"
+    "less": "^3.12.2",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
